# python-downloader

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  app.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
db/: user-agent.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/multple_pages/: Makefile  app.py
examples/one_page/: app.py
examples/one_page/templates/: index.html
examples/simple_site/simple_site/: asgi.py  settings.py  urls.py  wsgi.py
python_downloader/: __init__.py  config.py  file.py  python_downloader.py  urlinfo.py  utils.py
python_downloader/general_download/: __init__.py  general_domain_downloader.py  general_page_downloader.py
python_downloader/ourtv.online/: index.html
python_downloader/ourtv.online/css/: classic-themes.min.css  postratings-css.css  style.css  style.min.css  theme.main.dark.css  theme.style.css
python_downloader/stackoverflow/: __init__.py  stackoverflow_domain_downloader.py  stackoverflow_page_downloader.py
src/python_downloader/: cli.py  file.py  python_downloader.py  utils.py
src/python_downloader/general_download/: general_page_downloader.py
tests/: __init__.py  test_python_downloader.py
